# MegaWifiSDR

./: .gitignore  Makefile  README.md  reverb_reference.docx
firmware/: Kconfig.projbuild  app_main.c  megawifi.h  partitions.csv  sdkconfig.defaults
firmware/components/audio/: CMakeLists.txt  audio_player.c  audio_src_flash.c  micromod.c  micromod.h  mixer.c  mod_player.c  pwm_audio.c  reverb.c
firmware/components/audio/include/: audio_player.h  audio_src_flash.h  mixer.h  mod_player.h  pwm_audio.h  reverb.h
src/: main.c  megawifi.c  reverb_ctrl.c  reverb_ctrl.h
